--- a/templates/accounts/family_registration.html
+++ b/templates/accounts/family_registration.html
@@ -38,7 +38,7 @@
         </ul>
     {% endif %}
 
-        <input type="submit" value="登録" style="display: block; margin: 0 auto;">
+        <input type="submit" value="登録" style="display: block; margin: 0 auto;" class="btn-primary">
     </form>
 </div>
 {% endblock %}
