--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -5,7 +5,7 @@
 <form method="POST">
     {% csrf_token %}
       {{ form.as_p }}
-      <input type="submit" value="変更する">
+      <input type="submit" value="変更する" class="btn-primary">
       <a href="{% url 'accounts:mypage' %}"><button type="button">キャンセル</button></a>
 </form>
 </div>
