--- a/templates/accounts/registration.html
+++ b/templates/accounts/registration.html
@@ -21,7 +21,7 @@
             {% endif %}
         </p>
         {% endfor %}
-        <input type="submit" value="登録" style="margin-left: 80px; padding: 10px 20px;">
+        <input type="submit" value="登録" style="margin-left: 80px; padding: 10px 20px;" class="btn-primary">
     </form>
 </div>
 {% endblock %}
