--- a/templates/picture_book_app/child_list.html
+++ b/templates/picture_book_app/child_list.html
@@ -28,7 +28,7 @@
     </table>
     <div style="display: flex; justify-content: flex-end;">
         <a href="{% url 'picture_book_app:child_create' %}">
-            <button type="button">子の追加</button>
+            <button type="button" class="btn-edit">子の追加</button>
         </a>
     </div>
 </div>
