--- a/templates/picture_book_app/child_registration.html
+++ b/templates/picture_book_app/child_registration.html
@@ -14,7 +14,7 @@
             {{ form.birthday }}
         </div>
         <div style="text-align: center;">
-        <input type="submit" value="追加">
+        <input type="submit" value="追加" class="btn-primary">
         </div>
     </form>
 </div>
