--- a/templates/picture_book_app/reading_record_update.html
+++ b/templates/picture_book_app/reading_record_update.html
@@ -67,7 +67,7 @@
         </div>
 
         <div style="text-align: center; margin-top: 30px;">
-            <input type="submit" value="保存">
+            <input type="submit" value="保存" class="btn-primary">
         </div>
     </form>
 </div>
