--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -29,7 +29,7 @@
             <label for="id_password2">パスワード(再入力)：</label>
             {{ form.password2 }}
         </div>
-        <input type="submit" value="登録" style="margin-left: 100px; padding: 5px 20px;">
+        <input type="submit" value="登録" style="margin-left: 100px; padding: 5px 20px;" class="btn-primary">
     </form>
 </div>
 {% endblock %}
