--- a/templates/picture_book_app/reading_record_create.html
+++ b/templates/picture_book_app/reading_record_create.html
@@ -86,7 +86,7 @@
         </div>
 
 
-        <input type="submit" value="保存">
+        <input type="submit" value="保存" class="btn-primary">
     </form>
 </div>
 {% endblock %}
