ナビバー表示なし修正

--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_noheader.html" %}
 {% block content %}
 <div class="centered-container">
     <h1>＜パスワード再設定＞</h1>
