--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_noheader.html" %}
 {% block content %}
 <div class="centered-container">
     <h1>お話の足跡</h1>
