--- a/templates/accounts/registration.html
+++ b/templates/accounts/registration.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_noheader.html" %}
 {% block content %}
 <div class="container1">
     <h1>新規アカウント登録</h1>
