--- a/templates/accounts/request_password_reset.html
+++ b/templates/accounts/request_password_reset.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_noheader.html" %}
 {% block content %}
 <div class="container2">
     <h1 style="color: red;">パスワードリセットエラー</h1>
