アカウント変更画面少し修正

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -449,3 +449,12 @@ button.btn-secondary {
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+.container4 {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 2em;
+  background-color: #fff;
+  margin-top: 10px;
+  line-height: 1.6;
+}
