--- a/templates/picture_book_app/home.html
+++ b/templates/picture_book_app/home.html
@@ -6,7 +6,7 @@
 
     <div style="width: 180px; margin-left: auto; margin-right: 20px; margin-top: 30px;">
         <a href="{% url 'picture_book_app:reading_record_list' %}" 
-           style="font-size: 1.1rem; text-decoration: none; color: #007BFF;">
+           class="link-hover">
             過去の記録を振り返る
         </a>
     </div>
