--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -21,7 +21,7 @@
           {{ login_form.password.label_tag }}
           {{ login_form.password }}
       </div>
-      <input type="submit" value="ログイン">
+      <input type="submit" class="login-button" value="ログイン">
   </form>
 
   <p>
