--- a/templates/accounts/mypage.html
+++ b/templates/accounts/mypage.html
@@ -5,7 +5,7 @@
     <ul>
         <li><a href="{% url 'accounts:profile_update' %}" style="color: #555555; font-size: 1.5em;">アカウント情報変更</a></li>
         <li><a href="{% url 'picture_book_app:child_list' %}" style="color: #555555; font-size: 1.5em;">子ども一覧・登録・変更・削除</a></li>
-        <li><a href="{% url 'accounts:family_list' %}" style="color: #555555; font-size: 1.5em;">家族一覧・削除</a></li>
+        <li><a href="{% url 'accounts:family_list' %}" style="color: #555555; font-size: 1.5em;">連携中の家族一覧・削除</a></li>
         <li><a href="{% url 'accounts:create_invitation' %}" style="color: #555555; font-size: 1.5em;">家族招待URL作成</a></li>
     </ul>
 </div>
