--- a/templates/accounts/registration.html
+++ b/templates/accounts/registration.html
@@ -23,5 +23,7 @@
         {% endfor %}
         <input type="submit" value="登録" style="margin-left: 80px; padding: 10px 20px;" class="btn-primary">
     </form>
+
+    <a href="{% url 'accounts:login' %}" style="display: block; margin-top: 20px; margin-left: 70px;">ログイン画面へ</a>
 </div>
 {% endblock %}
