--- a/templates/accounts/family_list.html
+++ b/templates/accounts/family_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h1>家族一覧</h1>
+    <h1>連携中の家族一覧</h1>
     <a href="{% url 'accounts:mypage' %}" style="text-decoration: none; font-size: 1.2em; display: block; margin-top: 10px; margin-left: 0;">←戻る</a>
     <table class="table table-bordered">
         <thead>
