企画書変更

--- a/templates/top.html
+++ b/templates/top.html
@@ -28,7 +28,7 @@
         <div style="margin-top: 60px;">
             <h3 class="mb-4">資料リンク</h3>
             <div style="font-size: 1.1em; display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
-                <a href="{% static 'files/portfolio_murata1.pdf' %}" target="_blank">企画書</a>
+                <a href="{% static 'files/portfolio_murata.pdf' %}" target="_blank">企画書</a>
                 <a href="{% static 'files/gamen_seni_murata1.svg' %}" target="_blank">画面遷移図</a>
                 <a href="{% static 'files/er_murata.svg' %}" target="_blank">ER図</a>
             </div>
