ログイン画面のリンクにホバー効果を追加

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -25,7 +25,7 @@
   </form>
 
   <p>
-      <a href="{% url 'accounts:request_password_reset' %}" style="color: #555555;">
+      <a href="{% url 'accounts:request_password_reset' %}">
           ※パスワードを忘れた方はこちら
       </a>
   </p>
@@ -35,7 +35,7 @@
 
   <h6>初めてご利用の方は</h6>
   <p>
-      <a href="{% url 'accounts:regist' %}" style="color: #555555;">
+      <a href="{% url 'accounts:regist' %}">
         アカウント登録
       </a>
   </p>
