--- a/templates/picture_book_app/book_ranking.html
+++ b/templates/picture_book_app/book_ranking.html
@@ -33,6 +33,10 @@
                     <td>{{ book.book_title }}</td>
                     <td>{{ book.total_reads }}</td>
                 </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="3">記録が見つかりません</td>
+                </tr>
             {% endfor %}
         </tbody>
     </table>
