--- a/templates/accounts/invalid_invitation.html
+++ b/templates/accounts/invalid_invitation.html
@@ -1,9 +1,18 @@
-{% extends "base.html" %}
+{% extends "base_noheader.html" %}
 {% block content %}
-<div class="container1">
+<div class="container3">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     <h1>無効な招待リンク</h1>
     <p>この招待リンクは無効です。期限が切れているか、すでに使用された可能性があります。</p>
     <p>別のリンクを使用するか、再度招待を依頼してください。</p>
-    <p><a href="{% url 'accounts:accept_invitation' %}">家族アカウント登録画面に戻る</a></p>
+    <p style="text-align: center; margin-top: 30px;">
+        <a href="{% url 'accounts:login' %}">ログイン画面に戻る</a>
+    </p>
 </div>
 {% endblock %}
